# mech-tools-dev

./: .example.env  .example_agent.env  .gitignore  .gitleaksignore  .metadata_hash.json.example  .pylintrc  Makefile  README.md  README_LOCAL_MECH.md  mkdocs.yaml  mkdocs.yml  pyproject.toml  run_agent.sh  run_service.sh  sample.env  stop_service.sh  tox.ini
.github/workflows/: common_checks.yaml  release.yaml
config/: config_mech_base.json  config_mech_gnosis.json  config_mech_optimism.json  config_mech_polygon.json
docs/: index.md
docs/mech-tool/: index.md
mtd/: __init__.py  cli.py  context.py  deploy_mech.py  resources.py  setup_flow.py  workspace.py
mtd/commands/: __init__.py  add_tool_cmd.py  context_utils.py  deploy_mech_cmd.py  push_metadata_cmd.py  run_cmd.py  setup_cmd.py  stop_cmd.py  update_metadata_cmd.py
mtd/services/: __init__.py
mtd/services/metadata/: __init__.py  generate.py  publish.py  update_onchain.py
mtd/templates/: __init__.py  config.template  init.template  tool.template
mtd/templates/runtime/: .example.env  __init__.py  config_mech_base.json  config_mech_gnosis.json  config_mech_optimism.json  config_mech_polygon.json  metadata.template.json
scripts/: aea-config-replace.py  bump.py  check_doc_ipfs_hashes.py  generate_metadata.py  publish_metadata.py  setup.py
tests/: __init__.py
tests/unit/: __init__.py  test_context.py  test_deploy_mech.py  test_resources.py  test_setup_flow.py
tests/unit/cli/: __init__.py  test_add_tool_cmd.py  test_cli.py  test_deploy_mech_cmd.py  test_push_metadata_cmd.py  test_run_cmd.py  test_setup_cmd.py  test_stop_cmd.py  test_update_metadata_cmd.py
tests/unit/services/: test_metadata_services.py
utils/: aea-config-replace.py  check_dependencies.py  configure_and_deploy.py  generate_metadata.py  publish_metadata.py  setup.py  update_metadata.py
utils/abis/: ComplementaryServiceMetadata.json
